--- a/style.css/style.css
+++ b/style.css/style.css
@@ -5,5 +5,5 @@ div{
     width: 500px;
     height: 500px;
     background-color: antiquewhite;
-    background-image: url(/images/donation1.jpg);
+    background-image: url('/donation0.jpg');
 }
